--- a/src/main/resources/assets/ironrust/lang/en_us.json
+++ b/src/main/resources/assets/ironrust/lang/en_us.json
@@ -25,7 +25,7 @@
   "subtitles.entity.ironrust.rusty_cow.death": "Rusty Cow dies",
   "subtitles.entity.ironrust.rusty_cow.hurt": "Rusty Cow hurts",
   "advancements.ironrust.rust.root.title": "Rust",
-  "advancements.ironrust.rust.root.description": "Also known as \"ferric oxide\"",
+  "advancements.ironrust.rust.root.description": "Contains \"ferric oxide\"",
   "advancements.ironrust.rust.give_it_back.title": "Give it back",
   "advancements.ironrust.rust.give_it_back.description": "Kill a Rusty Cow with Rust Powder",
   "advancements.ironrust.rust.eat_rust_fruit.title": "Go rusty",
