--- a/src/main/resources/assets/ironrust/lang/zh_cn.json
+++ b/src/main/resources/assets/ironrust/lang/zh_cn.json
@@ -25,7 +25,7 @@
   "subtitles.entity.ironrust.rusty_cow.death": "铁锈牛：死亡",
   "subtitles.entity.ironrust.rusty_cow.hurt": "铁锈牛：受伤",
   "advancements.ironrust.rust.root.title": "铁锈",
-  "advancements.ironrust.rust.root.description": "也叫“氧化铁”",
+  "advancements.ironrust.rust.root.description": "含有“氧化铁”",
   "advancements.ironrust.rust.give_it_back.title": "还你",
   "advancements.ironrust.rust.give_it_back.description": "用铁锈粉杀死一头铁锈牛",
   "advancements.ironrust.rust.eat_rust_fruit.title": "生锈",
